<resources>
    <string name="app_name">Dingest Lodge</string>
    <string name="email">Email:</string>
    <string name="password">Mật khẩu</string>
    <string name="login">ĐĂNG NHẬP</string>
    <string name="register">ĐĂNG KÝ</string>
    <string name="name">Tên:</string>
    <string name="save">Lưu</string>
    <string name="enterdetails">Nhập thông tin ghi chú</string>
    <string name="newaccount"><u>ĐĂNG KÝ</u></string>
    <string name="haveccount">Đã có tài khoản!</string>
    <string name="verifyEmail">Vui lòng kiểm tra E-mail của bạn và nhấp vào <u>liên kết</u> của chúng tôi để xác minh tài khoản của bạn, sau đó bạn có thể đăng nhập!</string>
    <string name="my_profile">Hồ sơ của tôi</string>
    <string name="vname">Tên:</string>
    <string name="not_found">Không tìm thấy!</string>
    <string name="vemail">Email</string>
    <string name="update">Cập nhật</string>
    <string name="delete">Xóa</string>
    <string name="let_s_write">Hãy viết,</string>
    <string name="xinchaokhachhang">QUÝ KHÁCH CHỈ VIỆC CHUẨN BỊ HÀNH TRANG VÌ PHÒNG VÀ DỊCH VỤ TUYỆT VỜI NHẤT ĐÃ CÓ CHÚNG TÔI LO!</string>
    <string name="let_s_find_your_room">LUXURY AND ROMANTIC </string>
    <string name="best_offers">TOP ROOMS</string>
    <string name="view_all">XEM TẤT CẢ</string>
    <string name="lets_check_your_profile">THÔNG TIN CỦA BẠN</string>
    <string name="logout">Đăng xuất</string>
    <string name="master_room">Phòng VIP</string>
    <string name="all_service_you_need">DỊCH VỤ CỦA QUÝ KHÁCH</string>
    <string name="room_service">DỊCH VỤ PHÒNG</string>
    <string name="booking_history">LỊCH SỬ ĐẶT PHÒNG</string>
    <string name="current_booking">QUẢN LÝ PHÒNG ĐANG ĐẶT</string>
    <string name="requested_booking">YÊU CẦU ĐẶT PHÒNG</string>
    <string name="lets_do_some_management">QUẢN LÝ KHÁCH SẠN</string>
    <string name="view_customers">THÔNG TIN KHÁCH HÀNG</string>
    <string name="add_room">THÊM PHÒNG</string>
    <string name="view_rooms">THÔNG TIN TẤT CẢ PHÒNG</string>
    <string name="add">THÊM</string>
    <string name="upload_room_photo">Upload ảnh phòng</string>
    <string name="adding_new_room">THÊM PHÒNG MỚI</string>
    <string name="let_s_fill_up_the_needed_details">Điền thông tin chi tiết về phòng:</string>
    <string name="room_title">Tiêu đề phòng</string>
    <string name="room_description">Mô tả phòng</string>
    <string name="room_price">Giá phòng</string>
    <string name="room_location">Vị trí phòng</string>
    <string name="page_title">TIÊU ĐỀ TRANG</string>
    <string name="description">Mô tả</string>
    <string name="location">Vị trí:</string>
    <string name="price">Giá:</string>
    <string name="title">Tiêu đề:</string>
    <string name="similar">TƯƠNG TỰ</string>
    <string name="lets_book_your_room">HÃY CHỌN CĂN PHÒNG PHÙ HỢP</string>
    <string name="book">Đặt</string>
    <string name="cancel">Hủy</string>
    <string name="start_date">Check-in:</string>
    <string name="end_date">Ngày kết thúc</string>
    <string name="enter_nights">Nhập số đêm</string>
    <string name="status">Trạng thái:</string>
    <string name="total_payment">Tổng thanh toán:</string>
    <string name="accept">Chấp nhận</string>
    <string name="customer_email">Email:</string>
    <string name="checkout">CHECK-OUT:</string>
    <string name="nights">Đêm:</string>
    <string name="checkout_at">Đã thanh toán:</string>
    <string name="chuadc">CHƯA ĐƯỢC LỄ TÂN CUNG CẤP TÀI KHOẢN? \n 👉<u>VUI LÒNG ĐĂNG KÝ TẠI ĐÂY</u>👈</string>
    <string name="dadc">BẠN ĐÃ ĐƯỢC CUNG CẤP TÀI KHOẢN!  \n 👉<u> VUI LÒNG ĐĂNG NHẬP TẠI ĐÂY</u>👈</string>
    <string name="action_settings">Cài đặt</string>
    <!-- Chuỗi sử dụng cho các fragment trong điều hướng -->
    <string name="first_fragment_label">Fragment Đầu tiên</string>
    <string name="second_fragment_label">Fragment Thứ hai</string>
    <string name="next">Tiếp theo</string>
    <string name="previous">Trước</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string-array name="room_types">
        <item> Phòng đôi cổ điển </item>
        <item> Phòng đôi hiện đại </item>
        <item> Phòng đôi lãng mạn </item>
        <item> Phòng đôi đặc biệt </item>
        <item> Phòng đôi double </item>
        <item> Phòng đôi twin </item>
        <item> Phòng đôi business </item>
        <item> Phòng triple resort </item>
    </string-array>

    <string-array name="service_types">
        <item> Khu vui chơi </item>
        <item> Phòng đôi hiện đại </item>
        <item> Phòng đôi lãng mạn </item>
        <item> Phòng đôi đặc biệt </item>
        <item> Phòng đôi double </item>
        <item> Phòng đôi twin </item>
        <item> Phòng đôi business </item>
        <item> Phòng triple resort </item>
    </string-array>
</resources>