<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:background="@drawable/grey_circular_border"
            android:onClick="onMenuClick"
            android:padding="12dp"
            android:src="@drawable/menu"
            android:layout_marginTop="10dp"
            app:tint="@color/black"/>
        <ImageView
            android:layout_width="85dp"
            android:layout_height="100dp"
            android:layout_alignParentEnd="true"
            android:padding="12dp"
            android:layout_marginTop="-10dp"
            android:src="@drawable/admin"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/blue"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/let_s_find_your_room"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </LinearLayout>
    </RelativeLayout>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        android:layout_margin="7dp"
        android:layout_marginBottom="20dp"
        android:padding="10dp"
        android:id="@+id/CardView"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/apcardImage"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_gravity="center"
                android:background="@drawable/room"
                android:backgroundTint="@color/white"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="100"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/apcardStatus"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:padding="10dp"
                        android:background="@color/blue"
                        android:text="@string/status"
                        android:textAlignment="textStart"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/apcardTitle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:padding="10dp"
                        android:background="@color/blue"
                        android:text="@string/title"
                        android:textAlignment="textStart"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:textStyle="bold" />


                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="100"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/apcardStartDate"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:lines="1"
                        android:padding="10dp"
                        android:background="@color/blue"
                        android:text="@string/start_date"
                        android:textAlignment="textStart"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/apcardDays"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:lines="1"
                        android:padding="10dp"
                        android:background="@color/blue"
                        android:text="Số đêm:"
                        android:textAlignment="textStart"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:textStyle="bold" />


                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="100"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/apcardPrice"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:lines="1"
                        android:padding="10dp"
                        android:background="@color/blue"
                        android:text="@string/price"
                        android:textAlignment="textStart"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/apcardTotalPrice"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:lines="1"
                        android:padding="10dp"
                        android:background="@color/blue"
                        android:text="@string/total_payment"
                        android:textAlignment="textStart"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:textStyle="bold" />


                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="100"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="40"
                        android:padding="10dp"
                        android:background="@color/blue"
                        android:text="@string/customer_email"
                        android:textAlignment="textStart"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/apcardEmail"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="60"
                        android:padding="10dp"
                        android:background="@color/blue"
                        android:text="@string/email"
                        android:textAlignment="textStart"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:textStyle="bold" />


                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="100"
                    android:gravity="center_horizontal"
                    android:layout_height="wrap_content">
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/apcardApprove"
                        android:drawableEnd="@drawable/approve"
                        android:drawableTint="@color/black"
                        android:backgroundTint="@color/green"
                        android:padding="5dp"
                        android:layout_margin="15dp"
                        android:text="@string/accept"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:textStyle="bold" />
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/apcardCancel"
                        android:drawableEnd="@drawable/delete"
                        android:drawableTint="@color/white"
                        android:backgroundTint="@color/red"
                        android:padding="5dp"
                        android:layout_margin="15dp"
                        android:text="@string/cancel"
                        android:textSize="16sp"
                        android:textColor="@color/white"/>

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>